--- a/groups_manager.glade
+++ b/groups_manager.glade
@@ -264,18 +264,6 @@
       </object>
     </child>
   </object>
-  <object class="GtkTreeStore" id="repository_store">
-    <columns>
-      <!-- column-name import -->
-      <column type="gboolean"/>
-      <!-- column-name name -->
-      <column type="gchararray"/>
-      <!-- column-name path -->
-      <column type="gchararray"/>
-      <!-- column-name inconsistent -->
-      <column type="gboolean"/>
-    </columns>
-  </object>
   <object class="GtkWindow" id="import_window">
     <property name="width_request">320</property>
     <property name="height_request">400</property>
@@ -305,34 +293,42 @@
           </packing>
         </child>
         <child>
-          <object class="GtkTreeView" id="import_tree">
+          <object class="GtkScrolledWindow">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="model">repository_store</property>
-            <child internal-child="selection">
-              <object class="GtkTreeSelection"/>
-            </child>
+            <property name="shadow_type">in</property>
             <child>
-              <object class="GtkTreeViewColumn">
-                <child>
-                  <object class="GtkCellRendererToggle">
-                    <signal name="toggled" handler="update_import_selection" swapped="no"/>
-                  </object>
-                  <attributes>
-                    <attribute name="active">0</attribute>
-                    <attribute name="inconsistent">3</attribute>
-                  </attributes>
+              <object class="GtkTreeView" id="import_tree">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="model">repository_store</property>
+                <property name="search_column">0</property>
+                <child internal-child="selection">
+                  <object class="GtkTreeSelection"/>
                 </child>
-              </object>
-            </child>
-            <child>
-              <object class="GtkTreeViewColumn">
-                <property name="title" translatable="yes">Name</property>
                 <child>
-                  <object class="GtkCellRendererText"/>
-                  <attributes>
-                    <attribute name="text">1</attribute>
-                  </attributes>
+                  <object class="GtkTreeViewColumn">
+                    <child>
+                      <object class="GtkCellRendererToggle">
+                        <signal name="toggled" handler="update_import_selection" swapped="no"/>
+                      </object>
+                      <attributes>
+                        <attribute name="active">0</attribute>
+                        <attribute name="inconsistent">3</attribute>
+                      </attributes>
+                    </child>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkTreeViewColumn">
+                    <property name="title" translatable="yes">Name</property>
+                    <child>
+                      <object class="GtkCellRendererText"/>
+                      <attributes>
+                        <attribute name="text">1</attribute>
+                      </attributes>
+                    </child>
+                  </object>
                 </child>
               </object>
             </child>
@@ -386,5 +382,17 @@
         </child>
       </object>
     </child>
+  </object>
+  <object class="GtkTreeStore" id="repository_store">
+    <columns>
+      <!-- column-name import -->
+      <column type="gboolean"/>
+      <!-- column-name name -->
+      <column type="gchararray"/>
+      <!-- column-name path -->
+      <column type="gchararray"/>
+      <!-- column-name inconsistent -->
+      <column type="gboolean"/>
+    </columns>
   </object>
 </interface>
