--- a/confix.glade
+++ b/confix.glade
@@ -1011,7 +1011,7 @@
                   <object class="GtkMenuItem">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">Groups</property>
+                    <property name="label" translatable="yes">Tools</property>
                     <property name="use_underline">True</property>
                     <child type="submenu">
                       <object class="GtkMenu">
@@ -1021,9 +1021,18 @@
                           <object class="GtkMenuItem" id="manage_groups">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="label" translatable="yes">Manage groups</property>
+                            <property name="label" translatable="yes">Groups Manager</property>
                             <property name="use_underline">True</property>
                             <signal name="activate" handler="show_manage_groups" swapped="no"/>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkMenuItem">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="label" translatable="yes">Assistant</property>
+                            <property name="use_underline">True</property>
+                            <signal name="activate" handler="show_assistant" swapped="no"/>
                           </object>
                         </child>
                       </object>
@@ -1040,15 +1049,6 @@
                       <object class="GtkMenu" id="menu3">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <child>
-                          <object class="GtkMenuItem">
-                            <property name="visible">True</property>
-                            <property name="can_focus">False</property>
-                            <property name="label" translatable="yes">Assistant</property>
-                            <property name="use_underline">True</property>
-                            <signal name="activate" handler="show_assistant" swapped="no"/>
-                          </object>
-                        </child>
                         <child>
                           <object class="GtkImageMenuItem" id="imagemenuitem10">
                             <property name="label">gtk-about</property>
