--- a/confix.glade
+++ b/confix.glade
@@ -953,7 +953,7 @@
                           <object class="GtkMenuItem" id="menu_import">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="label" translatable="yes">_Import...</property>
+                            <property name="label" translatable="yes">_Import json file...</property>
                             <property name="use_underline">True</property>
                             <signal name="activate" handler="open_config" swapped="no"/>
                           </object>
@@ -963,7 +963,7 @@
                             <property name="visible">True</property>
                             <property name="sensitive">False</property>
                             <property name="can_focus">False</property>
-                            <property name="label" translatable="yes">_Export...</property>
+                            <property name="label" translatable="yes">_Export json file...</property>
                             <property name="use_underline">True</property>
                           </object>
                         </child>
