--- a/assistant.glade
+++ b/assistant.glade
@@ -23,8 +23,7 @@
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="label" translatable="yes">
-Cet assistant vous aidera à réaliser les tâches suivantes :
-</property>
+This assistant will help you in the following tasks :</property>
             <property name="wrap">True</property>
             <attributes>
               <attribute name="weight" value="bold"/>
