--- a/confix.glade
+++ b/confix.glade
@@ -1056,6 +1056,15 @@
                             <signal name="activate" handler="show_assistant" swapped="no"/>
                           </object>
                         </child>
+                        <child>
+                          <object class="GtkMenuItem">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="label" translatable="yes">filter helper</property>
+                            <property name="use_underline">True</property>
+                            <signal name="activate" handler="show_filter_helper" swapped="no"/>
+                          </object>
+                        </child>
                       </object>
                     </child>
                   </object>
